Restore 'Related' tab (now "Showcase") and fix some styles
Restores the tab for what used to be "Related" and is now "Showcase"
Also applies some style overrides to fix some things that look broken:
- remove padding above headers and at the sides of columns so that the
header of the primary page section doesn't have white borders above and
beside it.
- restrict image size to 100% of the containing element. The showcase
images are big and were breaking out.

--- a/ckanext/odp_theme/public/css/sass/main.scss
+++ b/ckanext/odp_theme/public/css/sass/main.scss
@@ -429,6 +429,11 @@ label {
   display: block;
 }
 
+/* Remove the dead space above headers inside the primary panel. */
+.module-content.page-header {
+  margin-top: 0px;
+}
+
 [role=main], .main {
   padding-top: 16px;
 }
@@ -441,4 +446,18 @@ label {
 // https://github.com/derilinx/ckanext-pdfview/commit/36081910d5bc38dcfbe82ac596c34c3b3be36107
 .ckanext-datapreview > iframe {
   min-height: 500px;
+}
+
+/* Prevent Showcase images from being wider than their containers. This used to be a global style
+   but that changed at some point.
+   It could be made more specific if it causes problems elsewhere.
+*/
+img {
+  max-width: 100%;
+}
+
+/* Remove the universal column padding because it makes an ugly space on the sides of headers. */
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
